--- a/designs/index.html
+++ b/designs/index.html
@@ -30,7 +30,7 @@
     <main>
       <div class="hero">
         <section class="hero-content">
-          <h2 class="sr-only">Promoted Contentt</h2>
+          <h2 class="sr-only">Promoted Content</h2>
           <p class="subtitle">No fees.</p>
           <p class="subtitle">No minimum deposit.</p>
           <p class="subtitle">High interest rates.</p>
